# Mirror

./: .gitignore  LICENSE  mirror.cabal  stack.yaml
app/: Main.hs
src/Control/: Mirror.hs
src/Control/Mirror/: Internal.hs  Parse.lhs  Type.hs
src/Control/Mirror/Type/: Internal.hs  Parse.hs  Parse.lhs  PrettyPrint.hs
test/Control/Mirror/Type/: ParseSpec.hs  PrettyPrintSpec.hs
