name:                mirror
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/Nolrai/mirror#readme
license:             BSD3
license-file:        LICENSE
author:              Christopher A. Upshaw
maintainer:          chrisaupshaw@gmail.com
copyright:           2016 Christopher A. Upshaw
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Mirror
                     , Control.Mirror.Type.Internal
                     , Control.Mirror.Type.PrettyPrint
                     , Control.Mirror.Type.Parse
                     , Control.Mirror.Parse
  ghc-options:         -W -Werror
  build-depends:       base >= 4.7
                     , pretty >= 1.1
                     , megaparsec
                     , transformers >= 0.4
                     , containers >= 0.6
                     , text >= 1.2.3
                     , unbound-generics >= 0.4
  default-language:    Haskell2010

executable mirror
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -W -Werror
  build-depends:       base
                     , mirror
  default-language:    Haskell2010

test-suite mirror-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Control.Mirror.Type.ParseSpec
                     , Control.Mirror.Type.PrettyPrintSpec
  build-depends:       base
                     , mirror
                     , hspec
                     , QuickCheck
                     , unbound-generics >= 0.4
                     , megaparsec
                     , lens
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -W -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Nolrai/mirror
